--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <canvas id="canvas" width="600" height="400"></canvas>
+  <canvas id="canvas" width="600" height="400" style="background: url('./img/sky.png'); background-size: cover;"></canvas>
   <script src="kontra.js"></script>
   <script src="index.js"></script>
 </body>
