--- a/index.html
+++ b/index.html
@@ -16,11 +16,41 @@
     height:400px; */
     border:1px solid #FF0000;
     }
+  div {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    display: block;
+    /* width: 800px;
+    height:400px; */
+    border:1px solid #FF0000;
+    }
   </style>
 </head>
 
 <body>
-  <canvas id="canvas" width="600" height="400" style="background: url('./img/sky.png'); background-size: cover;"></canvas>
+  <canvas id="canvas" width="600" height="400" style="background: url('./img/sky.png'); background-size: cover; display: none;"></canvas>
+	<div id="info" style="width: 600px; height:400px; background: url('./img/sky.png'); background-size: cover;text-align: center; padding-top:20px;">
+<image src="./img/santa.png">
+		<h1 >Santa has had too much festive ale and got lost in the forest again.<br/>
+It is up to Super Sergei to save him!<br/>
+Use cursor keys to fly.</h1>
+<image src="./img/sergei.gif">
+	</div>
+	<div id="dead" style="width: 600px; height:400px; background: url('./img/sky.png'); background-size: cover;text-align: center; padding-top:20px; display: none;">
+<image src="./img/sadsanta.png">
+		<h1 style="text-align: center;">You failed. No Christmas this year!<br/>
+Try again so children get presents next year!</h1>
+	</div>
+	<div id="win" style="width: 600px; height:400px; background: url('./img/sky.png'); background-size: cover; text-align: center; padding-top:20px; display: none;">
+<image src="./img/happysanta.png" height="200px">		
+<h1 style="text-align: center;">Hurrah! Super Sergei saved Christmas!!!<br/>
+Well Done!!!</h1>
+<image src="./img/sergei.gif">
+	</div>
+
   <script src="kontra.js"></script>
   <script src="index.js"></script>
 </body>
